# affinity-mapping-studio

./: .gitignore  LICENSE.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-mac.yml  build.yml
src/: App.tsx  SourceWindow.tsx  global.d.ts  main-DESKTOP-98FS3UF.tsx  main.tsx  styles.css
src-tauri/: App-probe.tsx.bak  Cargo-DesktopMetisPlus.toml  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: _gen_icon.py  icon.icns
src-tauri/src/: docx.rs  docx_writer.rs  file_dialog.rs  lib-DesktopMetisPlus.rs  lib.rs  main.rs  project_io.rs  sheet.rs  text_io.rs
src/api/: snapshotApi.ts  tauri-bridge.ts
src/components/: AnalyticDiagramView.tsx  AnalyticNode.tsx  AuditExportDialog.tsx  BulkReplaceDialog.tsx  BulkStyleDialog.tsx  CanvasView.tsx  CardNode.tsx  CardPlacementPane.tsx  CardSplitDialog.tsx  ContextMenu.tsx  DisplaySettingsDialog.tsx  ExportDialog.tsx  GroupMemberPanel.tsx  GroupNode.tsx  GroupPickerDialog.tsx  GtaWorkspace.tsx  HierarchyPane.tsx  ImportTextDialog.tsx  ImportWizard.tsx  KJFinalAnnotationCard.tsx  KJFinalShapeNode.tsx  KJFinalShapePalette.tsx  KJFinalView.tsx  LeftPanel.tsx  MGtaSettingsDialog.tsx  MGtaWorkspace.tsx  PromptDialog.tsx  RelationEdge.tsx  RelationMarkerDefs.tsx  RightPanel.tsx  SearchPanel.tsx  SourceViewer.tsx  StylePickerDialog.tsx  SyncConnectDialog.tsx  SyncStatusBadge.tsx  TagEditorDialog.tsx  VersionHistoryDialog.tsx  WordExportWizard.tsx
src/domain/: align.ts  audit.ts  bulkReplace.ts  cards.ts  finalDiagram.ts  (+12 more)
(+40 files in other folders)
