[package]
name = "affinity-mapping-tauri"
version = "0.2.29"
description = "Affinity Mapping Studio (Tauri 統合版)."
edition = "2021"
rust-version = "1.77"

[lib]
name = "affinity_mapping_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Phase 5b: dependency set proven in Phase 4c-2.
# Module files are now in src/ (docx.rs, sheet.rs, docx_writer.rs, project_io.rs, file_dialog.rs).
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
encoding_rs = "0.8"
calamine = "0.31"
csv = "1.3"
docx-rs = "0.4"
# 非ブロッキングダイアログ用の oneshot channel．tauri-plugin-dialog の
# 推奨パターン (callback + oneshot) で macOS のメインスレッド問題を回避．
tokio = { version = "1", features = ["sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
